java language level feature migration